add surefire config